{
  "ios": {
    "CFBundleDisplayName": "Étude",
    "NSMicrophoneUsageDescription": "Étude nutzt das Mikrofon, um dein Üben aufzunehmen, damit du es nachhören kannst, und um dein Instrument zu stimmen."
  }
}
